# laser_filters

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  ci.sh  laser_filters_plugins.xml  mainpage.dox  manifest.xml  nodelet_plugins.xml  nodelets.xml  package.xml  ros2_laser_filters_migration_readme.md  stack.xml
.github/workflows/: ros1_ci.yml  ros2_ci.yml
cfg/: AngularIntervalFilter.cfg  BoxFilter.cfg  IntensityFilter.cfg  PolygonFilter.cfg  RadiusOutlierFilter.cfg  RangeFilter.cfg  ScanShadowsFilter.cfg  SectorFilter.cfg  SpeckleFilter.cfg
config/: angular_bounds_filter.cfg  intensity_filter.cfg
examples/: angle_filter_example.launch  angular_filter_example.launch.py  angular_filter_example.yaml  basic.launch  box_filter.yaml  box_filter_example.launch  box_filter_example.launch.py  box_filter_example.yaml  footprint_filter_example.launch  footprint_filter_example.launch.py  footprint_filter_example.yaml  intensity_filter_example.launch  intensity_filter_example.launch.py  intensity_filter_example.yaml  interpolation_filter_example.launch  interpolation_filter_example.yaml  lower_res.launch  lower_res.yaml  mask_filter_example.launch  mask_filter_example.launch.py  mask_filter_example.yaml  median_filter_5_example.launch  median_filter_5_example.yaml  median_filter_example.launch.py  median_filter_example.yaml  multiple_filters_example.launch  multiple_filters_example.launch.py  multiple_filters_example.yaml  nodelet_example.launch  nodelet_example.yaml  pass_through_example.launch  pass_through_example.launch.py  pass_through_example.xml  point_cloud_footprint_filter_example.launch.py  point_cloud_footprint_filter_example.yaml  polygon_filter.yaml  polygon_filter_example.launch  polygon_filter_example.launch.py  polygon_filter_example.yaml  radius_outlier_example.launch  (+21 more)
include/laser_filters/: angular_bounds_filter.h  angular_bounds_filter.hpp  angular_bounds_filter_in_place.h  angular_bounds_filter_in_place.hpp  angular_interval_filter.h  angular_removal_filter.h  array_filter.h  array_filter.hpp  box_filter.h  box_filter.hpp  cloud_to_cloud_filter_chain_nodelet.h  filter_in_angle.h  filter_out_angle.h  footprint_filter.h  footprint_filter.hpp  intensity_filter.h  intensity_filter.hpp  interpolation_filter.h  interpolation_filter.hpp  lower_resolution_filter.h  median_filter.h  median_filter.hpp  point_cloud_footprint_filter.h  point_cloud_footprint_filter.hpp  polygon_filter.h  radius_outlier_detector.h  radius_outlier_filter.h  range_filter.h  range_filter.hpp  scan_blob_filter.h  scan_mask_filter.h  scan_mask_filter.hpp  scan_mean_shadow_filter.h  scan_shadow_detector.h  scan_shadows_filter.h  scan_shadows_filter.hpp  scan_std_deviation_filter.h  scan_to_cloud_filter_chain.h  scan_to_cloud_filter_chain_nodelet.h  scan_to_scan_filter_chain.h  (+2 more)
launch/: box_filter.launch.py  box_filter.yaml  footprint_filter.launch.py  footprint_filter.yaml  intensity_filter.launch.py  intensity_filter.yaml  mask_filter.launch.py  mask_filter.yaml  median_filter_5.launch.py  median_filter_5.yaml  multiple_filters.launch.py  multiple_filters.yaml  point_cloud_footprint_filter.yaml  range_filter.launch.py  range_filter.yaml  shadow_filter.launch.py  shadow_filter.yaml  test_scan_filter_chain.launch.py  test_scan_filter_chain.yaml
src/: array_filter.cpp  box_filter.cpp  cloud_to_cloud_filter_chain.cpp  cloud_to_cloud_filter_chain_nodelet.cpp  generic_laser_filter_node.cpp  intensity_filter.cpp  laser_scan_filters.cpp  lower_resolution_filter.cpp  median_filter.cpp  pointcloud_filters.cpp  polygon_filter.cpp  scan_shadow_detector.cpp  scan_shadows_filter.cpp  scan_to_cloud.cpp  scan_to_cloud_filter_chain.cpp  scan_to_cloud_filter_chain.hpp  scan_to_cloud_filter_chain_node.cpp  scan_to_cloud_filter_chain_nodelet.cpp  scan_to_scan_filter_chain.cpp  scan_to_scan_filter_chain.hpp  scan_to_scan_filter_chain_node.cpp  scan_to_scan_filter_chain_nodelet.cpp  sector_filter.cpp  speckle_filter.cpp
test/: fake_laser.py  test_polygon_filter  test_polygon_filter.launch  test_polygon_filter.test.py  test_polygon_filter.yaml  test_scan_filter_chain.cpp  test_scan_filter_chain.launch  test_scan_filter_chain.yaml  test_scan_shadows_filter.cpp  test_shadow_detector.cpp  test_speckle_filter  test_speckle_filter.cpp  test_speckle_filter.launch  test_speckle_filter.test.py  test_speckle_filter.yaml  test_speckle_filter_distance.yaml  test_speckle_filter_euclidean.yaml
